style: fixed DatePicker vertical-align bug #1561 (#1609)

--- a/packages/semi-foundation/datePicker/datePicker.scss
+++ b/packages/semi-foundation/datePicker/datePicker.scss
@@ -7,7 +7,6 @@ $module-list: #{$prefix}-scrolllist;
 .#{$module} {
     box-sizing: border-box;
     display: inline-block;
-    vertical-align: top;
 
     .#{$module-list}-body {
         .#{$module-list}-item {
